# trendys_ai

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/src/news_radar/: config.py  database.py  main.py
backend/src/news_radar/api/: health.py
backend/src/news_radar/core/: interfaces.py  models.py
backend/src/news_radar/notifications/: base.py
backend/src/news_radar/sources/: base.py
backend/src/news_radar/storage/: base.py
backend/tests/: conftest.py
backend/tests/integration/: test_health.py
